feat: adiciona lista e criacao de campanhas
